<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCrearIncidencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F9FAFB"
    tools:context=".fragments.CrearIncidenciaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/white"
        android:elevation="4dp">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Incidencia"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Título"/>

            <EditText
                android:id="@+id/tituloTextIncidencia"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="3dp"
                android:background="@android:drawable/editbox_background"
                android:drawableLeft="@drawable/baseline_title_24"
                android:hint="@string/title"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="Ubicación"/>
            <AutoCompleteTextView
                android:id="@+id/autoCompleteUbicacionIncidencia"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="3dp"
                android:background="@android:drawable/editbox_background"
                android:drawableLeft="@drawable/baseline_location_pin_24"
                android:drawablePadding="8dp"
                android:hint="@string/select_ubication"
                android:padding="8dp"

                android:focusable="false"
                android:cursorVisible="false"
                android:inputType="none"
                android:clickable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="Descripción del problema"/>
            <EditText
                android:id="@+id/editTextDescripcionIncidencia"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="6dp"
                android:hint="@string/description"
                android:background="@android:drawable/editbox_background"
                android:textSize="17sp"
                android:gravity="top|start"
                android:maxLines="6"
                android:minLines="4"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:weightSum="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
